Fixed pages that used absolute positioning being offscreen

--- a/client/src/app/auth/confirm-reset-password/confirm-reset-password.component.css
+++ b/client/src/app/auth/confirm-reset-password/confirm-reset-password.component.css
@@ -1,16 +1,12 @@
 .centerDivStyles {
-    background-color: white;
-    border: 1px solid #ccc;
+    margin: 70px auto;
     padding: 20px;
     border-radius: 5px;
+    border: 1px solid #ccc;
+    background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    width: 20em;
     max-width: 80%;
-    margin: 0 auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     text-align: center;
 }
 
